// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MobilePhoneChange /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div
  className="container content"
  id="mobile-phone-change"
>
  <div
    className="inner"
  >
    <form
      className="main-column"
      id="mobile-phone-change-form"
      onSubmit={[Function]}
    >
      <div
        className="inner"
      >
        <div
          className="fieldset row"
        >
          <div
            className="row phone-number"
          >
            <label
              htmlFor="phone-number"
            >
              PHONE_LBL
            </label>
            <React.Suspense
              fallback={
                <input
                  id="phone-number"
                  name="phone_number"
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="PHONE_PHOLD"
                  value=""
                />
              }
            >
              <UNDEFINED
                enableSearch={false}
                excludeCountries={Array []}
                inputProps={
                  Object {
                    "className": "form-control input ",
                    "id": "phone-number",
                    "name": "phone_number",
                    "required": true,
                  }
                }
                name="phone_number"
                onChange={[Function]}
                onKeyDown={[Function]}
                onlyCountries={Array []}
                placeholder="PHONE_PHOLD"
                preferredCountries={Array []}
                value=""
              />
            </React.Suspense>
          </div>
          <input
            className="button full"
            type="submit"
            value="PHONE_CHANGE_BTN"
          />
          <div
            className="row cancel"
          >
            <a
              className="button full"
              href="/test-org-2/mobile-phone-verification"
            >
              CANCEL
            </a>
          </div>
        </div>
      </div>
    </form>
    <Memo(Connect(Contact)) />
  </div>
</div>
`;

exports[`Change Phone Number: standard flow should render PhoneInput lazily and handlers should work correctly 1`] = `
<Suspense
  fallback={
    <input
      id="phone-number"
      name="phone_number"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="enter mobile phone number"
      value=""
    />
  }
>
  <lazy
    enableSearch={false}
    excludeCountries={Array []}
    inputProps={
      Object {
        "className": "form-control input ",
        "id": "phone-number",
        "name": "phone_number",
        "required": true,
      }
    }
    name="phone_number"
    onChange={[Function]}
    onKeyDown={[Function]}
    onlyCountries={Array []}
    placeholder="enter mobile phone number"
    preferredCountries={Array []}
    value=""
  />
</Suspense>
`;

exports[`Change Phone Number: standard flow should render successfully 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "subscribe": [Function],
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <withRouter(MobilePhoneChange)
      configuration={
        Object {
          "auto_login": true,
          "components": Object {
            "contact_page": Object {
              "email": "support@openwisp.co",
              "helpdesk": "+789 948 564",
              "social_links": Array [
                Object {
                  "alt": "twitter",
                  "icon": "twitter.svg",
                  "url": "https://twitter.com/openwisp",
                },
                Object {
                  "alt": "facebook",
                  "icon": "facebook.svg",
                  "url": "https://facebook.com/openwisp",
                },
              ],
            },
            "mobile_phone_verification_form": Object {
              "input_fields": Object {
                "code": Object {
                  "pattern": "[0-9]{6,}",
                  "type": "text",
                },
              },
            },
            "phone_number_change_form": Object {
              "buttons": Object {
                "cancel": true,
                "change_phone_number": true,
              },
              "input_fields": Object {
                "phone_number": Object {
                  "country": "it",
                  "type": "tel",
                },
              },
            },
            "registration_form": Object {
              "additional_info_text": true,
              "input_fields": Object {
                "birth_date": Object {
                  "setting": "disabled",
                  "type": "date",
                },
                "city": Object {
                  "type": "text",
                },
                "country": Object {
                  "type": "text",
                },
                "email": Object {
                  "pattern": ".+@.+\\\\..+",
                  "type": "email",
                },
                "first_name": Object {
                  "pattern": "[a-zA-Z@.+\\\\-_\\\\d]{1,150}",
                  "setting": "disabled",
                  "type": "text",
                },
                "last_name": Object {
                  "pattern": "[a-zA-Z@.+\\\\-_\\\\d]{1,150}",
                  "setting": "disabled",
                  "type": "text",
                },
                "location": Object {
                  "pattern": "[a-zA-Z@.+\\\\-_\\\\d]{1,150}",
                  "setting": "disabled",
                  "type": "text",
                },
                "password": Object {
                  "pattern": ".{6,}",
                  "type": "password",
                },
                "password_confirm": Object {
                  "pattern": null,
                  "type": "password",
                },
                "phone_number": Object {
                  "country": "it",
                  "type": "tel",
                },
                "street": Object {
                  "type": "text",
                },
                "tax_number": Object {
                  "pattern": "[a-zA-Z@.+\\\\-_\\\\d]{1,150}",
                  "type": "text",
                },
                "username": Object {
                  "pattern": "[a-zA-Z@.+\\\\-_\\\\d]{1,150}",
                  "type": "text",
                },
                "zipcode": Object {
                  "type": "number",
                },
              },
              "links": Object {
                "login": true,
              },
            },
          },
          "default_language": "en",
          "name": "test org 2 (sms)",
          "privacy_policy": Object {
            "en": "<h1 id=\\"openwisp-wifi-login-pages-privacy-policy\\">openwisp-wifi-login-pages Privacy Policy</h1>
<ul>
<li><p>Your privacy is important to us. It is Openwisp's policy to respect your privacy regarding any information we may collect from you across openwisp-wifi-login-pages.</p>
</li>
<li><p>We only ask for personal information when we truly need it to provide a service to you. We collect it by fair and lawful means, with your knowledge and consent. We also let you know why we’re collecting it and how it will be used.</p>
</li>
<li><p>We only retain collected information for as long as necessary to provide you with your requested service. What data we store, we’ll protect within commercially acceptable means to prevent loss and theft, as well as unauthorised access, disclosure, copying, use or modification.</p>
</li>
<li><p>We don’t share any personally identifying information publicly or with third-parties, except when required to by law.</p>
</li>
<li><p>Our website may link to external sites that are not operated by us. Please be aware that we have no control over the content and practices of these sites, and cannot accept responsibility or liability for their respective privacy policies.</p>
</li>
<li><p>You are free to refuse our request for your personal information, with the understanding that we may be unable to provide you with some of your desired services.</p>
</li>
<li><p>Your continued use of our website will be regarded as acceptance of our practices around privacy and personal information. If you have any questions about how we handle user data and personal information, feel free to contact us.</p>
</li>
</ul>
",
          },
          "settings": Object {
            "mobile_phone_verification": true,
          },
          "slug": "test-org-2",
          "terms_and_conditions": Object {
            "en": "<h1 id=\\"openwisp-wifi-login-pages-terms-and-conditions\\">Openwisp-wifi-login-pages Terms and Conditions</h1>
<ul>
<li><p>By using or visiting the Openwisp-wifi-login-pages, you signify your agreement
to these terms and conditions (the \\"Terms of Service\\") and the Privacy policy.</p>
</li>
<li><p>In order to access the wifi service, you need to be a registered user of the
default organization.</p>
</li>
<li><p>Openwisp-wifi-login-pages is not liable for any unauthorized use of your account,
you may be liable for the losses of the services or others due to such unauthorized use.</p>
</li>
<li><p>Openwisp reserves the right to discontinue or disallow any user, group or any
specific IP (internal or external) from using its services without any prior notice.</p>
</li>
<li><p>Violating the above mentioned Terms and Conditions may result in the termination
of the particular user account or the particular IP address from accessing
Openwisp-wifi-login-pages and using its services in the future.</p>
</li>
</ul>
",
          },
        }
      }
      cookies={
        Cookies {
          "HAS_DOCUMENT_COOKIE": true,
          "changeListeners": Array [],
          "cookies": Object {},
        }
      }
      language="en"
      logout={[MockFunction]}
      orgName="test org 2 (sms)"
      orgSlug="test-org-2"
      phone_number_change={
        Object {
          "buttons": Object {
            "cancel": true,
            "change_phone_number": true,
          },
          "input_fields": Object {
            "phone_number": Object {
              "country": "it",
              "type": "tel",
            },
          },
        }
      }
      setTitle={
        [MockFunction] {
          "calls": Array [
            Array [
              "Change mobile number",
              "test org 2 (sms)",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      setUserData={[MockFunction]}
      settings={
        Object {
          "mobile_phone_verification": true,
        }
      }
      userData={
        Object {
          "is_active": false,
          "phone_number": "+393660011222",
          "radius_user_token": "o6AQLY0aQjD3yuihRKLknTn8krcQwuy2Av6MCsFB",
          "response_code": "AUTH_TOKEN_VALIDATION_SUCCESSFUL",
          "username": "tester@tester.com",
        }
      }
    >
      <MobilePhoneChange
        configuration={
          Object {
            "auto_login": true,
            "components": Object {
              "contact_page": Object {
                "email": "support@openwisp.co",
                "helpdesk": "+789 948 564",
                "social_links": Array [
                  Object {
                    "alt": "twitter",
                    "icon": "twitter.svg",
                    "url": "https://twitter.com/openwisp",
                  },
                  Object {
                    "alt": "facebook",
                    "icon": "facebook.svg",
                    "url": "https://facebook.com/openwisp",
                  },
                ],
              },
              "mobile_phone_verification_form": Object {
                "input_fields": Object {
                  "code": Object {
                    "pattern": "[0-9]{6,}",
                    "type": "text",
                  },
                },
              },
              "phone_number_change_form": Object {
                "buttons": Object {
                  "cancel": true,
                  "change_phone_number": true,
                },
                "input_fields": Object {
                  "phone_number": Object {
                    "country": "it",
                    "type": "tel",
                  },
                },
              },
              "registration_form": Object {
                "additional_info_text": true,
                "input_fields": Object {
                  "birth_date": Object {
                    "setting": "disabled",
                    "type": "date",
                  },
                  "city": Object {
                    "type": "text",
                  },
                  "country": Object {
                    "type": "text",
                  },
                  "email": Object {
                    "pattern": ".+@.+\\\\..+",
                    "type": "email",
                  },
                  "first_name": Object {
                    "pattern": "[a-zA-Z@.+\\\\-_\\\\d]{1,150}",
                    "setting": "disabled",
                    "type": "text",
                  },
                  "last_name": Object {
                    "pattern": "[a-zA-Z@.+\\\\-_\\\\d]{1,150}",
                    "setting": "disabled",
                    "type": "text",
                  },
                  "location": Object {
                    "pattern": "[a-zA-Z@.+\\\\-_\\\\d]{1,150}",
                    "setting": "disabled",
                    "type": "text",
                  },
                  "password": Object {
                    "pattern": ".{6,}",
                    "type": "password",
                  },
                  "password_confirm": Object {
                    "pattern": null,
                    "type": "password",
                  },
                  "phone_number": Object {
                    "country": "it",
                    "type": "tel",
                  },
                  "street": Object {
                    "type": "text",
                  },
                  "tax_number": Object {
                    "pattern": "[a-zA-Z@.+\\\\-_\\\\d]{1,150}",
                    "type": "text",
                  },
                  "username": Object {
                    "pattern": "[a-zA-Z@.+\\\\-_\\\\d]{1,150}",
                    "type": "text",
                  },
                  "zipcode": Object {
                    "type": "number",
                  },
                },
                "links": Object {
                  "login": true,
                },
              },
            },
            "default_language": "en",
            "name": "test org 2 (sms)",
            "privacy_policy": Object {
              "en": "<h1 id=\\"openwisp-wifi-login-pages-privacy-policy\\">openwisp-wifi-login-pages Privacy Policy</h1>
<ul>
<li><p>Your privacy is important to us. It is Openwisp's policy to respect your privacy regarding any information we may collect from you across openwisp-wifi-login-pages.</p>
</li>
<li><p>We only ask for personal information when we truly need it to provide a service to you. We collect it by fair and lawful means, with your knowledge and consent. We also let you know why we’re collecting it and how it will be used.</p>
</li>
<li><p>We only retain collected information for as long as necessary to provide you with your requested service. What data we store, we’ll protect within commercially acceptable means to prevent loss and theft, as well as unauthorised access, disclosure, copying, use or modification.</p>
</li>
<li><p>We don’t share any personally identifying information publicly or with third-parties, except when required to by law.</p>
</li>
<li><p>Our website may link to external sites that are not operated by us. Please be aware that we have no control over the content and practices of these sites, and cannot accept responsibility or liability for their respective privacy policies.</p>
</li>
<li><p>You are free to refuse our request for your personal information, with the understanding that we may be unable to provide you with some of your desired services.</p>
</li>
<li><p>Your continued use of our website will be regarded as acceptance of our practices around privacy and personal information. If you have any questions about how we handle user data and personal information, feel free to contact us.</p>
</li>
</ul>
",
            },
            "settings": Object {
              "mobile_phone_verification": true,
            },
            "slug": "test-org-2",
            "terms_and_conditions": Object {
              "en": "<h1 id=\\"openwisp-wifi-login-pages-terms-and-conditions\\">Openwisp-wifi-login-pages Terms and Conditions</h1>
<ul>
<li><p>By using or visiting the Openwisp-wifi-login-pages, you signify your agreement
to these terms and conditions (the \\"Terms of Service\\") and the Privacy policy.</p>
</li>
<li><p>In order to access the wifi service, you need to be a registered user of the
default organization.</p>
</li>
<li><p>Openwisp-wifi-login-pages is not liable for any unauthorized use of your account,
you may be liable for the losses of the services or others due to such unauthorized use.</p>
</li>
<li><p>Openwisp reserves the right to discontinue or disallow any user, group or any
specific IP (internal or external) from using its services without any prior notice.</p>
</li>
<li><p>Violating the above mentioned Terms and Conditions may result in the termination
of the particular user account or the particular IP address from accessing
Openwisp-wifi-login-pages and using its services in the future.</p>
</li>
</ul>
",
            },
          }
        }
        cookies={
          Cookies {
            "HAS_DOCUMENT_COOKIE": true,
            "changeListeners": Array [],
            "cookies": Object {},
          }
        }
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "key": "",
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
        language="en"
        location={
          Object {
            "hash": "",
            "key": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          }
        }
        logout={[MockFunction]}
        match={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/",
            "url": "/",
          }
        }
        orgName="test org 2 (sms)"
        orgSlug="test-org-2"
        phone_number_change={
          Object {
            "buttons": Object {
              "cancel": true,
              "change_phone_number": true,
            },
            "input_fields": Object {
              "phone_number": Object {
                "country": "it",
                "type": "tel",
              },
            },
          }
        }
        setTitle={
          [MockFunction] {
            "calls": Array [
              Array [
                "Change mobile number",
                "test org 2 (sms)",
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        setUserData={[MockFunction]}
        settings={
          Object {
            "mobile_phone_verification": true,
          }
        }
        userData={
          Object {
            "is_active": false,
            "phone_number": "+393660011222",
            "radius_user_token": "o6AQLY0aQjD3yuihRKLknTn8krcQwuy2Av6MCsFB",
            "response_code": "AUTH_TOKEN_VALIDATION_SUCCESSFUL",
            "username": "tester@tester.com",
          }
        }
      >
        <div
          className="container content"
          id="mobile-phone-change"
        >
          <div
            className="inner"
          >
            <form
              className="main-column"
              id="mobile-phone-change-form"
              onSubmit={[Function]}
            >
              <div
                className="inner"
              >
                <div
                  className="fieldset row"
                >
                  <div
                    className="row phone-number"
                  >
                    <label
                      htmlFor="phone-number"
                    >
                      Mobile phone number
                    </label>
                    <Suspense
                      fallback={
                        <input
                          id="phone-number"
                          name="phone_number"
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          placeholder="enter mobile phone number"
                          value=""
                        />
                      }
                    >
                      <input
                        id="phone-number"
                        name="phone_number"
                        onChange={[Function]}
                        onKeyDown={[Function]}
                        placeholder="enter mobile phone number"
                        value=""
                      />
                    </Suspense>
                  </div>
                  <input
                    className="button full"
                    type="submit"
                    value="Change your phone number"
                  />
                  <div
                    className="row cancel"
                  >
                    <a
                      className="button full"
                      href="/test-org-2/mobile-phone-verification"
                    >
                      Cancel
                    </a>
                  </div>
                </div>
              </div>
            </form>
            <Connect(Contact)>
              <Contact
                contactPage={
                  Object {
                    "email": "support@openwisp.co",
                    "helpdesk": "+789 948 564",
                    "social_links": Array [
                      Object {
                        "alt": "twitter",
                        "icon": "twitter.svg",
                        "url": "https://twitter.com/openwisp",
                      },
                      Object {
                        "alt": "facebook",
                        "icon": "facebook.svg",
                        "url": "https://facebook.com/openwisp",
                      },
                    ],
                  }
                }
                dispatch={[Function]}
                isAuthenticated={false}
                orgSlug="test-org-2"
                userData={Object {}}
              >
                <div
                  className="side-column contact"
                >
                  <div
                    className="inner"
                  >
                    <div
                      className="row"
                    >
                      <span
                        className="label"
                      >
                        Email
                        :
                      </span>
                      <a
                        className="link"
                        href="mailto:support@openwisp.co"
                      >
                        support@openwisp.co
                      </a>
                    </div>
                    <div
                      className="row"
                    >
                      <span
                        className="label"
                      >
                        Helpdesk
                        :
                      </span>
                      <a
                        className="link"
                        href="tel:+789 948 564"
                      >
                        +789 948 564
                      </a>
                    </div>
                    <div
                      className="contact-links"
                    >
                      <a
                        className="link "
                        href="https://twitter.com/openwisp"
                        key="https://twitter.com/openwisp"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        <img
                          className="contact-image "
                          src="/assets/test-org-2/twitter.svg"
                        />
                      </a>
                      <a
                        className="link "
                        href="https://facebook.com/openwisp"
                        key="https://facebook.com/openwisp"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        <img
                          className="contact-image "
                          src="/assets/test-org-2/facebook.svg"
                        />
                      </a>
                    </div>
                  </div>
                </div>
              </Contact>
            </Connect(Contact)>
          </div>
        </div>
      </MobilePhoneChange>
    </withRouter(MobilePhoneChange)>
  </Router>
</Provider>
`;
